--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/krzysztof-kogut-a14a0a181/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.instagram.com/">Instagram</a>
+      <a class="footer-link" href="https://www.instagram.com/coniewiesz.kris/">Instagram</a>
       <p class="copyright">© 2020 Krzysztof Kogut.</p>
     </div>
   </body>
